--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
     </form>
     <footer class="container">
       WOW il mio negozio di Smartphone! in Via E'unProblemaDiNoiBellissimi, 32,
-      ME<br><a href="https://www.amazon.it/">Visita il nostro sito per vedere tutti i prodotti</a>
+      ME<br /><a href="https://www.amazon.it/"
+        >Visita il nostro sito per vedere tutti i prodotti</a
+      >
     </footer>
 
     <script src="./script.js"></script>
