--- a/index.html
+++ b/index.html
@@ -127,10 +127,8 @@
       <button type="submit">Invia</button>
     </form>
     <footer class="container">
-      WOW il mio negozio di Smartphone! in Via E'unProblemaDiNoiBellissimi, 32,
-      ME<br /><a href="https://www.amazon.it/"
-        >Visita il nostro sito per vedere tutti i prodotti</a
-      >
+      WOW il mio negozio di Smartphone!
+      <span>in Via E'unProblemaDiNoiBellissimi, 32, ME</span>
     </footer>
 
     <script src="./script.js"></script>
